--- a/lessons/00_Turtles/01_Get_Started.ipynb
+++ b/lessons/00_Turtles/01_Get_Started.ipynb
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello 👋 World 🌎 ! Today is August 29, 2024\n"
+      "Hello 👋 uranus 🌎 ! Today is September 19, 2024\n"
      ]
     }
    ],
@@ -101,11 +101,18 @@
     "import datetime\n",
     "\n",
     "date = datetime.date.today().strftime(\"%B %d, %Y\")\n",
-    "s = F\"Hello 👋 World 🌎 ! Today is {date}\"\n",
+    "s = F\"Hello 👋 uranus 🌎 ! Today is {date}\"\n",
     "\n",
     "\n",
     "print(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -218,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
