--- a/lessons/00_Turtles/06b_Variables_and_Functions.ipynb
+++ b/lessons/00_Turtles/06b_Variables_and_Functions.ipynb
@@ -126,7 +126,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "say_hello('bob',3)"
+    "def say_hello(name, times):\n",
+    "\n",
+    "    for i in range(times):\n",
+    "        print(i, \"hello\", name\n",
+    "say_hello(\"John\", 10)               )"
    ]
   },
   {
