polygon and functions

--- a/lessons/00_Turtles/06b_Variables_and_Functions.ipynb
+++ b/lessons/00_Turtles/06b_Variables_and_Functions.ipynb
@@ -99,9 +99,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Hello  John\n",
+      "1 Hello  John\n",
+      "2 Hello  John\n",
+      "3 Hello  John\n",
+      "4 Hello  John\n"
+     ]
+    }
+   ],
    "source": [
     "def say_hello(name, times):         # define the function, and give it a name.  'name' and 'times' are parameters\n",
     "\n",
@@ -122,15 +134,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 hello John\n",
+      "1 hello John\n",
+      "2 hello John\n",
+      "3 hello John\n",
+      "4 hello John\n",
+      "5 hello John\n",
+      "6 hello John\n",
+      "7 hello John\n",
+      "8 hello John\n",
+      "9 hello John\n"
+     ]
+    }
+   ],
    "source": [
     "def say_hello(name, times):\n",
     "\n",
     "    for i in range(times):\n",
-    "        print(i, \"hello\", name\n",
-    "say_hello(\"John\", 10)               )"
+    "        print(i, \"hello\", name)\n",
+    "say_hello(\"John\", 10)               "
    ]
   },
   {
@@ -143,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
