--- a/lessons/00_Turtles/01_Get_Started.ipynb
+++ b/lessons/00_Turtles/01_Get_Started.ipynb
@@ -101,7 +101,9 @@
     "import datetime\n",
     "\n",
     "date = datetime.date.today().strftime(\"%B %d, %Y\")\n",
-    "s = F\"Hello 👋 uranus 🌎 ! Today is {date}\"\n",
+    "s = F\"Hello 👋 uranus 🌎 ! Today is {date}\n",
+    "\\\\\\\\\\\\\\\\\\];[lpkhogj.ihhhhhhhhhhhhhhhhhhhhhhhhhhhhk8i9op[]   \\\n",
+    "                                                                                                                                                                        ``]\"\n",
     "\n",
     "\n",
     "print(s)"
